--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.0",
     "firebase": "^11.3.0",
     "moment": "^2.30.1",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
