--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.6",
     "@tailwindcss/vite": "^4.0.6",
     "antd": "^5.24.0",
     "firebase": "^11.3.0",
     "moment": "^2.30.1",
     "papaparse": "^5.5.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
